# mrover-ros2

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_old.txt  Dockerfile  ESW_CHANGES.md  README.md  ansible.cfg  ansible.sh  bootstrap-portable.sh  bootstrap.sh  build-robostack.sh  build.sh  build_ci.sh  build_out.txt  bun.lockb  clean  clean.sh  compile_commands.json  convert.py  docker-compose.yml  entrypoint.sh  environment.bash  frames_2026-02-10_19.27.55.gv  heading_fix_status.csv  heading_rtk.csv  icd.csv  justfile  long_heading.csv  long_heading_fix_status.csv  long_linearized_position.csv  mrover.py  new_sim.yaml  out.txt  package-lock.json  package.json  package.xml  pixi.toml  (+14 more)
.dynamixel_sdk/: CHANGELOG.rst
.pixi/: config.toml
action/: ClickIk.action  IkImageSample.action  KeyAction.action  TypingCode.action  TypingDeltas.action  TypingIK.action  TypingPosition.action
ansible/: basestation.yml  build.yml  ci.yml  dev-portable.yml  dev-robostack.yml  dev.yml  dev_only.yml  esw.yml  jetson.yml  jetson_build.yml  jetson_flash.yml  percep.yml  portable.yml  science.yml  teleop.yml
cmake/: macros.cmake  toolchain.cmake
config/: antenna.yaml  arm.yaml  arm_params.yaml  aruco_params.yaml  auton_client.yaml  cameras.yaml  dm_client.yaml  drive.yaml  es_client.yaml  esw.yaml  finger_cam_intrinsics.yaml  keyboard_typing.yaml  light_detector.yaml  localization.yaml  mast_gimbal.yaml  motor.yaml  multi_detection.yaml  navigation.yaml  object_detector.yaml  perception.yaml  realistic_simulator.yaml  reference_coords.yaml  sa.yaml  sa_params.yaml  science.yaml  science_client.yaml  sim_cameras.yaml  simulator.rviz  simulator.yaml  sp.yaml  superstructure.yaml  u2d2.yaml  zed.yaml  zed_mini.yaml
data/: .gitignore  25Epoch.onnx  50Epoch.onnx  GreenWaterBottle.onnx  GreenWaterBottleTest.onnx  Synthetic.onnx  best.onnx  best.pt  bottle.onnx  magic.onnx  mallet.onnx  mock-mission.onnx  motor_encoder_data.csv  pick.onnx  plot.py  tensorrt-engine-Large-Dataset.onnx.engine  yolo-key-detection.onnx
docker/: Dockerfile.devel  compose.gpu.yml  compose.yml  entrypoint.sh
dynamixel_sdk/: package.xml
esw/: 2_dev_board_test_bridge.cpp  3bm_tb.cpp  3bm_test_bridge.cpp  antenna_bridge.cpp  arm_hw_bridge.cpp  bdcmc_test_bridge.cpp  differential_drive_controller.cpp  drive_hw_bridge.cpp  dynamixel.cpp  led.cpp  led_hw_bridge.cpp  mast_gimbal_hw_bridge.cpp  motor_test_bridge.cpp  pdb_hw_bridge.cpp  pdlb_hw_bridge.cpp  plot_joint_b_log.py  sa_arduino_hw_bridge.cpp  sa_hw_bridge.cpp  science_bridge.cpp  science_hw_bridge.cpp  science_test_bridge.cpp  servo_hw_bridge.cpp  simple_bridge.cpp  u2d2_bridge.cpp
esw/fw/lib/: CMakeLists.txt
esw/fw/lib/dbc/: CMakeLists.txt
esw/fw/lib/dbc/runtime/: CMakeLists.txt  README.md
esw/fw/lib/dbc/runtime/include/: dbc_runtime.hpp  file_parser.hpp  frame_processor.hpp  message.hpp  signal.hpp
esw/fw/lib/dbc/runtime/src/: file_parser.cpp  frame_processor.cpp  message.cpp  signal.cpp
esw/fw/lib/dbc/runtime/tests/: CMakeLists.txt  science_test.dbc  test.cpp
esw/fw/lib/dbc/templates/: dbc_header.hpp.j2
esw/fw/lib/stm32/: CMakeLists.txt
esw/fw/lib/stm32/Inc/: adc.hpp  timer.hpp
esw/fw/lib/stm32/Inc/hw/: ad8418a.hpp  flash.hpp  hbridge.hpp  limit_switch.hpp  pin.hpp  quadrature.hpp
esw/fw/lib/stm32/Inc/serial/: fdcan.hpp  smbus.hpp  uart.hpp
esw/fw/lib/stm32g4/: CMakeLists.txt
esw/fw/lib/stm32g4/templates/: .clangd.j2  CMakeLists.txt.j2  CMakePresets.json.j2
esw/fw/lib/units/: CMakeLists.txt
esw/fw/lib/util/: CMakeLists.txt
esw/fw/lib/util/Inc/: filtering.hpp  logger.hpp  pidf.hpp  util.hpp
esw/fw/starter-projects/servo/receiver/cmake/stm32cubemx/: CMakeLists.txt
esw/fw/tools/: CMakeLists.txt  pyproject.toml
esw/fw/tools/esw/: __init__.py
esw/fw/tools/esw/bmc/: config.py
esw/fw/tools/esw/can/: canbus.py
esw/fw/tools/esw/can/dbc/: __init__.py  hpp_generator.py  parser.py
esw/fw/tools/esw/cubemx/: __init__.py  cmake.py  generation.py
esw/fw/tools/esw/stlink/: __init__.py  serial.py
esw/fw/tools/scripts/: analyze_flash.py  bmc.yaml  bmc_config.py  can_header_gen.py  clangd.py  generate_project.py  gripper.yaml  joint_b.yaml  monitor.py  send_can.py  update_cmake_cfg.py  write_gains.py
geometry/: __init__.py  conversions.py
gps_heading_test_11_7/: gps_heading_test_11_7_0.db3  metadata.yaml
gps_heading_test_11_8/: metadata.yaml  rosbag2_2024_11_08-09_51_57_0.db3
gps_testing_11_3/: gps_testing_11_3_0.db3  metadata.yaml
gps_testing_cart_11_3/: gps_testing_cart_11_3_0.db3  metadata.yaml
gps_testing_percep_laptop_11_3/: gps_testing_percep_laptop_11_3_0.db3  metadata.yaml
gst/: gst.hpp  gst_codec.hpp
gst_utils/: gst.hpp  gst_pipeline.hpp  gst_utils.hpp  gst_v4l2.hpp
iekf_test1_3_10/: iekf_test1_3_10_0.db3  metadata.yaml
iekf_test1_3_12/: linearized_position.csv  mag_heading.csv  metadata.yaml  pose.csv
iekf_test1_3_22/: iekf_test1_3_22_0.db3  linearized_position.csv  mag_heading.csv  metadata.yaml  plot.py  pose.csv  velocity.csv
iekf_test2_3_10/: iekf_test2_3_10_0.db3  metadata.yaml
iekf_test3_3_10/: iekf_test3_3_10_0.db3  metadata.yaml
launch/: arm_camera_client.launch.py  astar_debug.launch.py  auton_camera_client.launch.py  autonomy.launch.py  base.launch.py  base.launch.xml  basestation.launch.py  camera_client.launch.py  cost_map_composed.launch.py  costmap.launch.py  (+36 more)
teleoperation/camera_client/: CMakeLists.txt  Gst.hpp  GstRtpVideoCreatorWidget.hpp  MainWindow.hpp  VideoSelectorWidget.hpp
teleoperation/camera_client/include/: CallbackCheckBox.hpp  CameraClientMainWindow.hpp  CameraClientNode.hpp  CameraConfigWidget.hpp  ClickIkPanel.hpp  Gst.hpp  GstRtpVideoCreatorWidget.hpp  GstVideoGridWidget.hpp  GstVideoWidgets.hpp  ImagePreview.hpp  MainWindow.hpp  VideoSelectorWidget.hpp  pch.hpp
teleoperation/camera_client/src/: CallbackCheckBox.cpp  CameraClientMainWindow.cpp  CameraClientNode.cpp  CameraConfigWidget.cpp  ClickIkPanel.cpp  GstRtpVideoCreatorWidget.cpp  GstVideoWidgets.cpp  ImagePreview.cpp  MainWindow.cpp  VideoSelectorWidget.cpp  main.cpp
(+1522 files in other folders)
