<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>mrover</name>
    <version>2025.0.0</version>
    <description>MRover ROS2 Package</description>
    <maintainer email="rover-software-team@umich.edu">MRover</maintainer>
    <license>GPL-3.0</license>

    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf_transformations</depend>
    <depend>urdf</depend>
    <depend>rclpy</depend>
    <depend>rclcpp</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>rclcpp_components</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
